# symphony-rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  SPEC.md  WORKFLOW.md  clippy.toml  flake.nix
.cargo/: config.toml  mutants.toml
.codex/: config.toml
crates/symphony-app/: Cargo.toml
crates/symphony-app/src/: cli.rs  error.rs  events.rs  hydrate.rs  lib.rs  linear.rs  main.rs  service.rs  ui.rs  workflow.rs
crates/symphony-app/tests/: playwright_acceptance.rs
crates/symphony-core/: Cargo.toml
crates/symphony-core/src/: config_view.rs  error.rs  lib.rs  orchestrator.rs  prompt.rs  snapshot.rs  workflow_loader.rs
crates/symphony-core/tests/: config_tests.rs  orchestrator_tests.rs  snapshot_tests.rs  workflow_and_prompt_tests.rs
crates/symphony-domain/: Cargo.toml
crates/symphony-domain/src/: config.rs  error.rs  issue.rs  lib.rs  normalization.rs  runtime.rs  workflow.rs
crates/symphony-domain/tests/: validation_props.rs
e2e/: SPEC_ACCEPTANCE_MATRIX.md  package.json  playwright.config.ts
e2e/fixtures/: WORKFLOW.e2e.md  fake-codex-app-server.mjs
e2e/tests/: acceptance.spec.ts  mutants-smoke.spec.ts
e2e/tests/helpers/: symphony-harness.ts
scripts/: check-doc-sync.sh
