[package]
name = "symphony-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true, optional = true }
async-trait = { version = "0.1.89", optional = true }
axum = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
clap = { version = "4.5.60", features = ["derive"], optional = true }
futures = { workspace = true, optional = true }
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta = { workspace = true, optional = true }
leptos_router = { workspace = true, optional = true }
liquid = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
symphony-core = { version = "0.1.0", path = "../symphony-core", optional = true }
symphony-domain = { version = "0.1.0", path = "../symphony-domain", optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
wasm-bindgen = { version = "0.2.108", optional = true }

[features]
default = ["ssr"]
ssr = [
  "dep:anyhow",
  "dep:async-trait",
  "dep:axum",
  "dep:chrono",
  "dep:clap",
  "dep:futures",
  "dep:leptos_axum",
  "dep:leptos_meta",
  "dep:leptos_router",
  "dep:liquid",
  "dep:notify",
  "dep:parking_lot",
  "dep:reqwest",
  "dep:serde",
  "dep:serde_json",
  "dep:serde_yaml",
  "dep:symphony-core",
  "dep:symphony-domain",
  "dep:thiserror",
  "dep:tokio",
  "dep:tokio-util",
  "dep:tower",
  "dep:tower-http",
  "dep:tracing",
  "dep:tracing-subscriber",
  "dep:url",
  "dep:uuid",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos_axum/default",
]
hydrate = [
  "dep:wasm-bindgen",
  "leptos/hydrate",
]

[package.metadata.leptos]
output-name = "symphony-app"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "bun run test:e2e"
bin-features = ["ssr"]
lib-features = ["hydrate"]
