[package]
name = "symphony-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
liquid.workspace = true
regex = "1.12.3"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
symphony-domain = { version = "0.1.0", path = "../symphony-domain" }
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest = "1.10.0"
